--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -1,10 +1,31 @@
-*
-{
-    margin: 0;
-    padding: 0;
+*{
+    margin: 0em;
+    padding: 0em;
 }
-body 
-{
-    font-family: Arial,sans-serif;
+body{
+    font-family: Arial;
     font-size: 15px;
+}
+
+header{
+    background-color: seashell;
+    height: 7.5em;
+}
+
+/************************Header************************/
+header section {
+    float: left;
+    background-color: skyblue;
+}
+header section p {
+    text-align: center;
+}
+
+header nav{
+    float: right;
+}
+
+
+ul{
+    list-style: none;
 }
