--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -1,30 +1,54 @@
 *{
-    margin: 0em;
-    padding: 0em;
+    box-sizing:content-box;
+    margin: 0;
+    padding: 0;
+    line-height: 1;
+    font-family:  arial;
 }
+
 body{
     font-family: Arial;
     font-size: 15px;
+    box-sizing: content-box;
 }
 
 header{
-    background-color: seashell;
-    height: 7.5em;
+    height: 120px;
+    box-sizing: content-box;
+
 }
+
+.wrapper{
+    margin: 0 auto;
+    padding: 0;
+    width: 1000px;
+    background-color: slateblue;
+}
+
 
 /************************Header************************/
 header section {
+    box-sizing: content-box;
     float: left;
+    margin: 0 auto;
+    padding: 0;
+    width: 50%;
+    height: 100%;
     background-color: skyblue;
+}
+header nav{
+    box-sizing: content-box;
+    float: right;
+    margin: 0 auto;
+    padding: 0;
+    width: 50%;
+    height: 100%;
+    background-color: springgreen;
 }
 header section p {
     text-align: center;
+    margin: auto;
 }
-
-header nav{
-    float: right;
-}
-
 
 ul{
     list-style: none;
