--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/css/style.css
@@ -30,6 +30,20 @@ a{
     color: black;
 }
 
+nav, h2, h3{
+    text-transform: uppercase;
+}
+
+h3{
+    margin: 30px;
+    font-weight: bold;
+    font-size: 14pt;
+}
+img{
+    margin: 55px 0px 15px 0px;
+}
+
+
 /*Formatage des propriétés des liens*/
 .orange-dot{
     font-family: "Crete Round", Arial, Helvetica, sans-serif;
@@ -134,33 +148,32 @@ h2 strong{
 /*============================================================*/
 
 #prestations{
-    height: 400px;
+    height: 380px;
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
 }
 #prestations div{
     height: 100%;
-    background-color: teal;
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-    flex-direction: row;
 }
-article img{
+#prestations ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+#prestations li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    height: 380px;
+}
+#prestations p{
+    margin: 25px 0;
     height: 100px;
-    width: 100px;
 }
 
-#prestations article{
-    height: 100%;
-    width: 30%;
-    font-size: 88%;
-    background-color: teal;
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-}
+
 
 
 /*############### CIRCUITS ##############*/
@@ -168,14 +181,8 @@ article img{
 /*############### CONTACTS ##############*/
 
 /*################ FOOTER ###############*/
-h3{
-    font-weight: bold;
-    font-size: 14pt;
-}
 
-nav, h2, h3{
-    text-transform: uppercase;
-}
+
 
 
 hr{
