--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -1,6 +1,6 @@
-/*============================================================*/
-/*========================== GENERAL =========================*/
-/*============================================================*/
+/*#######################################################################*/
+/*############################### GENERAL ###############################*/
+/*#######################################################################*/
 *{
     margin: 0;
     padding: 0;
@@ -9,68 +9,95 @@
     font-size: 100%;
     font-weight: normal;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
+body{
+    width: 100vp;
+    height: 2000px;
+}
+
 li{
     display: inline;
 }
-
-/*============================================================*/
-/*========================== HEADER ==========================*/
-/*============================================================*/
-header{
-    position: fixed;
-    width: 100%;
-    min-height: 120px;
-    background-color: rgb(187, 139, 221);
+h1{
+    font-size: 300%;
+    font-weight: bold;
+    font-family: "Crete Round", Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+}
+.orange-dot{
+    font-size: 150%;
+    font-family: "Crete Round", Arial, Helvetica, sans-serif;
+    color: #ff7a00;
 }
 
-/*============================================================*/
-/*========================== ACCUEIL =========================*/
-/*============================================================*/
-#accueil{
+/*#######################################################################*/
+/*################################ HEADER ###############################*/
+/*#######################################################################*/
+header{
     width: 100%;
-    min-height: 700px;
-    background-color: khaki;
+    height: 6%;
+    background-color: lightskyblue;
 }
 h1, nav{
+    box-sizing: border-box;
     width: 50%;
+    height: 100%;
+    background-color: lime;
+    float: left;
 }
 h1{
-background-color: lightcoral;
+    left: 0;
+    background-color: rgb(128, 139, 240);
+
 }
 nav{
-background-color: lightgreen;
+    right: 0;
+    background-color: mediumslateblue;
 }
 
-/*============================================================*/
+/*#######################################################################*/
+/*################################# MAIN ################################*/
+/*#######################################################################*/
+
+/*========================== GENERAL =========================*/
+main{
+    width: 100%;
+    height: 85%;
+    background-color: springgreen;
+}
+/*========================== ACCUEIL =========================*/
+#accueil{
+    width: 100%;
+    height: 39%;
+    background-color:mediumseagreen ;
+}
+
 /*======================== PRESTATIONS =======================*/
-/*============================================================*/
 #prestations{
     width: 100%;
-    min-height: 400px;
-    background-color: lawngreen;
+    height: 21%;
+    background-color: orangered;
 }
-/*============================================================*/
 /*========================= CIRCUITS =========================*/
-/*============================================================*/
 #circuits{
     width: 100%;
-    min-height: 380px;
-    background-color: lightseagreen;
+    height: 20%;
+    background-color:mediumvioletred ;
 }
-/*============================================================*/
 /*========================= CONTACTS =========================*/
-/*============================================================*/
 #contacts{
     width: 100%;
-    min-height: 380px;
-    background-color: magenta;
+    height: 20%;
+    background-color: royalblue;
 }
-/*============================================================*/
-/*========================== FOOTER ==========================*/
-/*============================================================*/
+
+
+/*#######################################################################*/
+/*################################ FOOTER ###############################*/
+/*#######################################################################*/
 footer{
     width: 100%;
-    min-height: 150px;
-    background-color: rgb(58, 35, 142);
+    height: 9%;
+    background-color: lightcoral;
 }
