--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -17,7 +17,7 @@ body{
 }
 
 li{
-    display: inline;
+    display: inline-block;
 }
 h1{
     font-size: 300%;
@@ -30,6 +30,11 @@ h1{
     font-family: "Crete Round", Arial, Helvetica, sans-serif;
     color: #ff7a00;
 }
+a{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
 
 /*#######################################################################*/
 /*################################ HEADER ###############################*/
@@ -37,24 +42,43 @@ h1{
 header{
     width: 100%;
     height: 6%;
-    background-color: lightskyblue;
 }
-h1, nav{
+header h1, nav{
     box-sizing: border-box;
     width: 50%;
     height: 100%;
-    background-color: lime;
     float: left;
+    color: rgb(46, 46, 58);
 }
-h1{
-    left: 0;
-    background-color: rgb(128, 139, 240);
+header ul{
+    width: 100%;
+    height: 100%;
+    text-align: left;
+    margin-left: 5%;
+}
+header li{
+    width: 15%;
+    height: 100%;
+}
+.menu{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+}
+header a{
+    text-transform: uppercase;
+    display: inline-block;
+    width: 100%;
+    padding: 26% 0;
+    color: rgb(70, 68, 68);
+}
+.menu:hover{
+    background-color: rgb(216, 214, 210);
+}
+.menu:hover a{
+    color: black;
+}
 
-}
-nav{
-    right: 0;
-    background-color: mediumslateblue;
-}
 
 /*#######################################################################*/
 /*################################# MAIN ################################*/
