--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -25,17 +25,30 @@ h1{
     font-family: "Crete Round", Arial, Helvetica, sans-serif;
     text-transform: capitalize;
 }
+a, strong{
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
 .orange-dot{
     font-size: 150%;
     font-family: "Crete Round", Arial, Helvetica, sans-serif;
     color: #ff7a00;
 }
-a{
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
+.wrapper{
+    height: 100%;
+    width: 50%;
+    margin: 0 25%;
 }
-
+.orange-button{
+    color: white;
+    background-color: #ff7a00;
+    border-radius: 5px;
+}
+.orange-button:hover{
+    color: white;
+    background-color: #02b8dd;
+}
 /*#######################################################################*/
 /*################################ HEADER ###############################*/
 /*#######################################################################*/
@@ -45,19 +58,24 @@ header{
 }
 header h1, nav{
     box-sizing: border-box;
-    width: 50%;
     height: 100%;
     float: left;
-    color: rgb(46, 46, 58);
+    color: rgb(90, 86, 86);
+}
+h1{
+    width: 50%;
+}
+nav{
+    width: 50%;
 }
 header ul{
-    width: 100%;
+    width: 800px;
     height: 100%;
     text-align: left;
     margin-left: 5%;
 }
 header li{
-    width: 15%;
+    width: 20%;
     height: 100%;
 }
 .menu{
@@ -66,11 +84,12 @@ header li{
     background-color: white;
 }
 header a{
+    font-size: 100%;
     text-transform: uppercase;
     display: inline-block;
     width: 100%;
     padding: 26% 0;
-    color: rgb(70, 68, 68);
+    color: rgb(90, 86, 86);
 }
 .menu:hover{
     background-color: rgb(216, 214, 210);
@@ -88,26 +107,123 @@ header a{
 main{
     width: 100%;
     height: 85%;
-    background-color: springgreen;
 }
 /*========================== ACCUEIL =========================*/
 #accueil{
     width: 100%;
     height: 39%;
-    background-color:mediumseagreen ;
+    background-image: url(../img/main.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
+#accueil h2{
+    padding: 17% 0 0% 0;
+    text-transform: uppercase;
+    font-size: 300%;
+}
+#accueil .orange-button{
+    display: inline-block;
+    padding: 1.4% 4%;
+    margin: 10% 0;
+}
 /*======================== PRESTATIONS =======================*/
 #prestations{
     width: 100%;
     height: 21%;
-    background-color: orangered;
+}
+#prestations article{
+    width: 33.33%;
+    height: 100%;
+}
+#planifier{
+    position: relative;
+    left: 0;
+}
+#organiser{
+    position: relative;
+    left: 33.33%;
+    top: -100%;
+}
+#voyager{
+    position: relative;
+    left: 66.66%;
+    top: -200%;
+}
+img{
+    padding: 15% 0 8% 0;
+}
+h3{
+    font-size: 118%;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 5% 0%;
+}
+#prestations p{
+    font-size: 92%;
+    padding: 7%;
 }
 /*========================= CIRCUITS =========================*/
 #circuits{
+    background-color: #efefef;
     width: 100%;
     height: 20%;
-    background-color:mediumvioletred ;
+}
+#circuits .wrapper{
+    height: 100%;
+    width: 44%;
+    margin: 0 28%;
+}
+#circuits article{
+    width: 48%;
+    height: 70%;
+    border-radius: 9px;
+}
+#partez-en-famille{
+    position: relative;
+    left: 0;
+    top: 15%;
+    background-image: url(../img/article-image-1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#envie-evasion{
+    position: relative;
+    left: 52%;
+    top: -55%;
+    background-image: url(../img/article-image-2.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#circuits article>div{
+    height: 100%;
+    width: 42%;
+    background-color: rgba(255,255,255, 0.95);
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+}
+#circuits article>div h3{
+    padding: 10% 0;
+    margin: 0 10% 10% 10%;;
+    width: 80%;
+    border-bottom: 2px solid rgb(209, 206, 206);
+}
+#circuits article>div p{
+    padding: 0 10%;
+    height: 40%;
+    width: 80%;
+    font-style: italic;
+    line-height: 140%;
+    font-size: 80%;
+}
+#circuits article>div a{
+    height: 20%;
+    width: 78%;
+    padding: 5%;
+    font-weight: normal;
+    font-size: 90%;
 }
 /*========================= CONTACTS =========================*/
 #contacts{
