--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -79,7 +79,6 @@ header a{
     color: black;
 }
 
-
 /*#######################################################################*/
 /*################################# MAIN ################################*/
 /*#######################################################################*/
@@ -90,11 +89,15 @@ main{
     height: 85%;
     background-color: springgreen;
 }
+
 /*========================== ACCUEIL =========================*/
 #accueil{
     width: 100%;
     height: 39%;
-    background-color:mediumseagreen ;
+    background-image: url(../img/main.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*======================== PRESTATIONS =======================*/
