--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/css/style.css
@@ -60,7 +60,7 @@ header h1, nav{
     box-sizing: border-box;
     height: 100%;
     float: left;
-    color: rgb(90, 86, 86);
+    color: #444;
 }
 h1{
     width: 50%;
@@ -256,11 +256,12 @@ label{
     padding: 1%;
 }
 input{
+    border-radius: 2px;
     height: 40%;
     margin-right: 3%;
     text-align: left;
     text-indent: 3%;
-    border: 1px solid #949191;
+    border: 1px solid #bbb1b1;
 }
 input:last-of-type{
     background-color: #02b8dd;
@@ -281,5 +282,15 @@ input:last-of-type:hover{
 footer{
     width: 100%;
     height: 9%;
-    background-color: lightcoral;
+    background-color: #444;
+    text-align: center;
+}
+footer h1{
+    width: 100%;
+    height: 60%;
+    padding-top: 1%;
+    color: white;
+}
+footer p{
+    color: #777;
 }
